Try to fix header alignment

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header {
 .navbar {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .hlogo {
